# hackathon-fubini

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fubini.py
src/: main.rs
