[package]
name = "fubini"
version = "0.1.0"
authors = ["georg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2
debug = false
lto = true

[dependencies]
rayon = "1.5"

[dependencies.rug]
version = "1.11"
default-features = false
features = ["integer"]